--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -138,7 +138,7 @@
 
         <variable
             name="vm"
-            type="com.example.movies.ui.detail.DetailViewModel" />
+            type="com.example.movies.ui.detail.MovieDetailViewModel" />
     </data>
 
 </layout>
