feat: replace HorizontalScrollView with FlexboxLayout

--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -14,23 +14,16 @@
             android:paddingVertical="16dp"
             tools:context=".ui.main.MovieListFragment">
 
-            <HorizontalScrollView
-                android:id="@+id/lv_genres"
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/rv_genres"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:scrollbars="none"
+                android:layout_marginTop="10dp"
+                app:flexWrap="wrap"
+                app:genres="@{vm.movie.genreIds}"
                 app:layout_constraintEnd_toEndOf="@+id/tv_title"
                 app:layout_constraintStart_toStartOf="@+id/tv_title"
-                app:layout_constraintTop_toBottomOf="@id/iv_backdrop">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:genres="@{vm.movie.genreIds}" />
-
-            </HorizontalScrollView>
+                app:layout_constraintTop_toBottomOf="@id/iv_backdrop" />
 
             <ImageView
                 android:id="@+id/iv_backdrop"
@@ -41,7 +34,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_info" />
-
 
             <TextView
                 android:id="@+id/tv_info"
@@ -85,7 +77,7 @@
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@id/tv_title"
                 app:layout_constraintStart_toStartOf="@+id/tv_title"
-                app:layout_constraintTop_toBottomOf="@+id/lv_genres" />
+                app:layout_constraintTop_toBottomOf="@+id/rv_genres" />
 
             <TextView
                 android:id="@+id/tv_ranking"
