refactor: use shared viewModel

--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -15,6 +15,7 @@
             android:layout_width="100dp"
             android:layout_height="0dp"
             android:scaleType="fitXY"
+            android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -25,6 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@{movie.combineTitle}"
@@ -72,7 +74,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.movies.ui.main.MovieListViewModel" />
+            type="com.example.movies.ui.shared.MovieViewModel" />
 
         <variable
             name="movie"
