--- a/app/src/main/res/layout/item_footer_progress.xml
+++ b/app/src/main/res/layout/item_footer_progress.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="16dp">
 
         <ProgressBar
             android:id="@+id/progress_bar"
@@ -22,6 +22,8 @@
             android:id="@+id/tv_error_msg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
             android:gravity="center"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
