--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -14,7 +14,7 @@
             android:id="@+id/iv_poster"
             android:layout_width="100dp"
             android:layout_height="0dp"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
             android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
