--- a/app/src/main/res/layout/item_footer_progress.xml
+++ b/app/src/main/res/layout/item_footer_progress.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="@dimen/margin_common_16dp">
 
         <ProgressBar
             android:id="@+id/progress_bar"
